fixed column gap on resellers section on home page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,7 +247,7 @@
   background-color: #d7d7d7;
   width: 100%;
   display: grid;
-  gap: 30px;
+  row-gap: 30px;
   place-items: center;
   background-image: url(/images/bread-bg-portrait.jpeg);
   background-repeat: no-repeat;
